--- a/app.html
+++ b/app.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>main</title>
+  <title>app</title>
 </head>
 <body>
-  main
+  app
 </body>
 </html>
